# rs-agent-code-utility

./: .gitattributes  .gitignore  .mcp.json  .windsurferrules  AGENTS.md  ARCHITECTURE.md  AUDIT_EPICS_01.md  CHANGELOG.md  CLI_README.md  CODEBASE_IMPROVEMENT_DOCUMENT.md  CODEX_MCP_INTEGRATION_PLAN.md  CODEX_SECURITY_SCAN_HARDENING_EPICS.md  COMPREHENSIVE_TODO_LIST.md  Cargo.toml  README.md  RESILIENCE.md  SECURITY_ANALYSIS_IMPROVEMENT_ROADMAP.md  WINDOWINC_WIKI_ANALYSIS.md  claude.md  debug_cpp.rs  gemini_audit.md  lefthook.yml  security_report.json  simple_embedded_test.rs  test_ai_filtering.rs  test_epic2.rs
.claude/: settings.json
agent-bench/: README.md  pi-norts.abeval_norts.json  pi-rts.abeval_rts.json  pi-rtsf.abeval_rtsf.json  pyproject.toml
agent-bench/agent_bench/: cli.py  corpus.py  eval_docker.py  eval_verify.py  isolation.py  mcp_bridge.py  report.py  run.py
agent-bench/corpus/: swe-bench-lite-smoke.json
agent-bench/tests/: conftest.py  test_arm_profiles.py  test_cli_estimate.py  test_cli_rts_wiring.py  test_cli_run.py  test_corpus.py  test_eval_docker.py  test_eval_verify.py  test_isolation.py  test_mcp_bridge.py  test_rts_bridge_wiring.py  test_run_loop.py  test_stats.py
crates/rts-bench/: Cargo.toml  corpus.lock.example
crates/rts-bench/src/: baseline.rs  corpus.rs  footprint.rs  footprint_helpers.rs  latency.rs  main.rs  mcp_runner.rs  report.rs  semantic.rs  token.rs  verify_metrics.rs
crates/rts-bench/src/doctor/: binary_section.rs  ctx.rs  daemon_section.rs  mcp_section.rs  mod.rs  nudge_hook.rs  render.rs  report.rs  workspace_section.rs
crates/rts-bench/src/doctor/hosts/: aider.rs  claude_code.rs  cline.rs  continue_.rs  cursor.rs  mod.rs
crates/rts-bench/src/dogfood/: classify.rs  mod.rs  parse.rs
crates/rts-bench/src/real_repos/: config.rs  diff.rs  mod.rs  repos.toml
crates/rts-bench/src/tasks/: get_body.rs  locate_def.rs  mod.rs  scenario_compiler_fix.rs  scenario_refactor_impact.rs  summarize_module.rs
crates/rts-bench/tests/: dogfood_smoke.rs  footprint_smoke.rs  get_body_bench.rs  grep_latency_test.rs  latency_smoke.rs  locate_def_bench.rs  query_cli.rs  real_repos_smoke.rs  scenario_compiler_fix_bench.rs  summarize_module_bench.rs  verify_edit_metrics_integration.rs  verify_metrics_integration.rs
crates/rts-core/: Cargo.toml
crates/rts-core/src/: advanced_parallel.rs  analysis_utils.rs  analyzer.rs  code_map.rs  complexity_analysis.rs  constants.rs  control_flow.rs  dependency_analysis.rs  extraction.rs  file_cache.rs  lib.rs  memory_tracker.rs  pagerank.rs  parent_scope.rs  parser.rs  performance_analysis.rs  query.rs  semantic_context.rs  semantic_graph.rs  signature.rs  symbol.rs  symbol_table.rs  tree.rs
crates/rts-core/src/languages/: c.rs  cpp.rs  go.rs  java.rs  mod.rs  php.rs  python.rs  ruby.rs  rust.rs  typescript.rs
crates/rts-core/src/verify/: candidates.rs  mod.rs  references.rs  resolution.rs  signature_shape.rs
crates/rts-core/tests/: analyzer_cache_tests.rs  basic_integration_tests.rs  complexity_analysis_unit_tests.rs  dependency_analysis.rs  error_tests.rs  file_cache_tests.rs  integration_tests.rs  metadata.rs  missing_language_features_tests.rs  parser_comprehensive_tests.rs  performance_optimization_tests.rs  performance_optimizations_tests.rs  public_api.rs  simple_memory_test.rs  symbol_listing.rs
crates/rts-core/tests/snapshots/: public-api.txt
crates/rts-daemon/: Cargo.toml  build.rs
crates/rts-daemon/fuzz/: Cargo.toml
crates/rts-daemon/fuzz/fuzz_targets/: grep_regex.rs  grep_structural.rs
crates/rts-daemon/src/: cancel.rs  closure.rs  error.rs  filter.rs  fingerprint.rs  gitignore_hash.rs  impact.rs  language.rs  latency.rs  lifecycle.rs  main.rs  outline.rs  path.rs  protocol.rs  reconciler.rs  refs.rs  socket.rs  state.rs  symbol_pagerank.rs  telemetry_ticker.rs  verify_edit.rs  watcher.rs  workspace.rs  writer.rs
crates/rts-daemon/src/methods/: daemon.rs  index.rs  mod.rs  session.rs  workspace.rs
crates/rts-daemon/src/store/: mod.rs  schema.rs
crates/rts-daemon/tests/: adversarial_proptest.rs  call_edges_csharp.rs  call_edges_java.rs  call_edges_php.rs  call_edges_swift.rs  cancel_in_flight.rs  closure_precision.rs  closure_round_trip.rs  daemon_stats_grep_subcounters.rs  daemon_stats_round_trip.rs  daemon_stats_v2_round_trip.rs  deadline.rs  find_callers_round_trip.rs  find_symbol_round_trip.rs  fuzzy_and_at_round_trip.rs  grep_multiline_round_trip.rs  grep_round_trip.rs  grep_v2_capabilities.rs  grep_v2_structural_intersection.rs  grep_within_symbol_round_trip.rs  impact_of_round_trip.rs  markdown_indexing.rs  mount_race_round_trip.rs  outline_round_trip.rs  p6_watcher_hardening.rs  parent_scope.rs  per_workspace_sockets.rs  persisted_cold_mount_round_trip.rs  protocol_schemas.rs  read_round_trip.rs  reconciliation_round_trip.rs  symbol_pagerank_round_trip.rs  unresolved_refs_gc.rs  verify_claims_round_trip.rs  verify_edit_round_trip.rs  verify_impact_round_trip.rs  verify_import_round_trip.rs  verify_signature_round_trip.rs  verify_symbol_round_trip.rs  wire_round_trip.rs
crates/rts-mcp/: Cargo.toml
crates/rts-mcp/src/: cli.rs  connection.rs  daemon_client.rs  entropy.rs  lib.rs  main.rs  server.rs  socket.rs  telemetry.rs
crates/rts-mcp/tests/: cli_autobootstrap.rs  cli_callers.rs  cli_exit_codes.rs  cli_find.rs  cli_grep.rs  cli_impact.rs  cli_json.rs  cli_no_color.rs  cli_outline.rs  cli_read.rs  cli_stats.rs  cli_telemetry.rs  cli_verify.rs  cli_verify_edit.rs  connection_resilience.rs  daemon_telemetry_tool.rs  mcp_round_trip.rs  public_api.rs  telemetry_collectors.rs  telemetry_privacy.rs  tool_descriptions.rs
crates/rts-mcp/tests/cli_common/: mod.rs
crates/rts-mcp/tests/fixtures/: telemetry_v1.golden.json
crates/rts-mcp/tests/snapshots/: public-api.txt
spikes/p0-1-rmcp-hello/: Cargo.toml  RESULTS.md
spikes/p0-1-rmcp-hello/src/: client.rs  server.rs
spikes/p0-2-redb-smoke/: Cargo.toml  RESULTS.md
spikes/p0-2-redb-smoke/src/: main.rs
spikes/p1-1-verify-edit-delta/: Cargo.toml  RESULTS.md
spikes/p1-1-verify-edit-delta/src/: main.rs
(+2416 files in other folders)
