[workspace]
resolver = "3"
members = [
    "crates/rts-core",
    "crates/rts-daemon",
    "crates/rts-mcp",
    "crates/rts-bench",
]
# `spikes/*` and `archive/*` are deliberately excluded — they're scratch
# binaries (P0 validation) and historical retired code, not part of the
# product build. Each `spikes/p0-*` directory is its own independent crate.
exclude = [
    "spikes/p0-1-rmcp-hello",
    "spikes/p0-2-redb-smoke",
    "spikes/p0-3-notify-smoke",
    "archive",
]

[workspace.package]
version = "0.2.0-alpha.33"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/rust_tree_sitter"
edition = "2024"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "deny"
