[package]
name = "rts-bench"
description = "Benchmark harness for the rts-mcp stack: baseline (ripgrep+read) vs MCP token-reduction measurement, plus latency + footprint benches. The only operator-facing surface in the v0.2 stack."
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "rts-bench"
path = "src/main.rs"

[dependencies]
# Runtime. Bench tasks subprocess `rts-mcp` and `rg` and consume their stdio
# concurrently, so we want the full multi-thread Tokio runtime.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "process", "time", "fs"] }

# Wire encoding for MCP JSON-RPC + corpus.lock + bench-*.json output.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Fixture integrity. SHA256 + blake3 for content addressing.
sha2 = "0.10"
blake3 = "1"
hex = "0.4"

# CLI subcommands. `clap` is cheap to bring in for the bench-only surface.
clap = { version = "4", features = ["derive"] }

# Filesystem walking (mirrors rts-core's filter).
ignore = "0.4"

# Pretty-printing the JSON report.
indexmap = { version = "2", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
