[package]
name = "rts-bench"
description = "Benchmark harness for the rts-mcp stack: baseline (ripgrep+read) vs MCP token-reduction measurement, plus latency + footprint benches. The only operator-facing surface in the v0.2 stack."
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "rts-bench"
path = "src/main.rs"

[dependencies]
# Runtime. Bench tasks subprocess `rts-mcp` and `rg` and consume their stdio
# concurrently, so we want the full multi-thread Tokio runtime.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "process", "time", "fs", "net"] }

# Wire encoding for MCP JSON-RPC + corpus.lock + bench-*.json output.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Fixture integrity. SHA256 + blake3 for content addressing.
sha2 = "0.10"
blake3 = "1"
hex = "0.4"

# CLI subcommands. `clap` is cheap to bring in for the bench-only surface.
clap = { version = "4", features = ["derive"] }

# XDG-aware home/config dir resolution. Used by `rts-bench doctor`
# (U2+) for per-agent-host config file discovery (`~/.cursor/mcp.json`,
# `~/.continue/config.yaml`, etc.). Same crate (`dirs = "5"`) is
# already a transitive dep via rts-daemon; promote to direct here so
# the doctor surface doesn't depend on it indirectly.
dirs = "5"

# Pretty-printing the JSON report.
indexmap = { version = "2", features = ["serde"] }

# Synthetic workspace generation for the latency bench (S1) lives in
# the main binary path; move tempfile to runtime deps.
tempfile = "3"

# TOML parsing for the semantic-eval corpus format. Pure-Rust, small.
toml = "0.8"

# YAML parsing for Continue's `~/.continue/config.yaml` (and Aider's
# `~/.aider.conf.yml`). Pulled in for the `doctor` subcommand's per-host
# MCP-registration detectors (U7); same crate is already in use by
# rts-core, so this does not introduce a new transitive dep.
serde_yaml = "0.9"
