[package]
name = "rts-daemon"
description = "Persistent local code-retrieval daemon for the rts-mcp stack (see docs/protocol-v0.md)"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "rts-daemon"
path = "src/main.rs"

# v0.6 persisted cold-mount (capability `daemon_stats_v2` mount_source
# field). `build.rs` parses `rts-core/Cargo.toml` at compile time and
# bakes the tree-sitter grammar crate versions into the daemon binary
# via the `RTS_GRAMMAR_VERSIONS` env var. `toml` is the only dep
# needed; `serde_json` is intentionally avoided to keep build-time
# closure minimal.
[build-dependencies]
toml = "0.8"

[dependencies]
# Surviving rts-core: parser, language adapters, ignore-walk, symbol table.
rust_tree_sitter = { path = "../rts-core" }

# Async runtime + Unix-socket plumbing
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "signal", "fs", "sync", "time", "process"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Hashing for workspace fingerprint and (later) content hashes
blake3 = "1"

# File watcher (P0.3-verified pair). 150ms debounce window per protocol-v0
# §9.3 / plan deepening §P6 watcher recipe.
notify = "8"
notify-debouncer-full = "0.7"

# Workspace walker (re-exports the gitignore parser used for the pre-filter).
ignore = "0.4"

# Editor-swap-file pattern matching + v0.5.5 `Index.Grep.regex` mode.
regex = "1"

# v0.5.5 `Index.Grep.file_glob` filter. Already a transitive dep
# through `ignore`; promoting to explicit so the daemon compiles
# against a stable interface rather than `ignore`'s re-export.
globset = "0.4"

# Unix syscalls: umask, prctl, peer-creds, flock, etc.
# nix 0.29 supports rust-version >= 1.69; we're on 1.85, well above.
nix = { version = "0.29", features = ["fs", "user", "process", "resource", "socket", "signal"] }
libc = "0.2"

# On-disk index store. Pinned to the same major used in the P0.2 spike (redb 2.6).
redb = "2"
postcard = { version = "1", features = ["alloc"] }

# XDG / runtime-dir lookup
dirs = "5"

# macOS path NFC normalisation (per protocol-v0.md §5.1)
unicode-normalization = "0.1"

# Parallel parse fan-out in the writer's flush hot path. tree-sitter `Parser`
# isn't `Sync`, but our `ParserPool::parse_and_extract` uses a fresh local
# `CodebaseAnalyzer` per call — the parser-pool lock just seeds an unused
# cache entry, so the heavy work runs concurrently.
rayon = "1"

# v0.5.5+ Index.Grep v2 structural-query cache. 64-entry LRU keyed on
# `(Language, query_text)`; Query::new compilation is amortized across
# repeated structural calls with the same shape. See
# `crates/rts-daemon/src/methods/grep_v2/query_cache.rs`.
lru = "0.12"

tempfile = "3"

[features]
default = []
# v0.6 anonymous opt-in telemetry: enables the daemon-side 24h ticker
# that shells out to the `rts` binary's `telemetry flush` subcommand.
# The daemon itself still links zero HTTP code paths, per AGENTS.md
# "Dependency hygiene" — the HTTP client lives in the `rts` binary
# (behind its own `telemetry` feature). This daemon-side feature is
# default-OFF; operators build with `--features telemetry` to compile
# the ticker in. Runtime opt-in (via `rts telemetry enable`) is also
# required before any ping fires.
telemetry = []

[dev-dependencies]
# Static-file JSON Schema validation for the protocol-v0 schema export
# (`schemas/v0/`). Test-only — see `tests/protocol_schemas.rs`. The
# 0.x line speaks JSON Schema 2020-12, which is what
# `schemas/v0/*.schema.json` declare via `$schema`.
jsonschema = { version = "0.46", default-features = false }

# Property-based / adversarial input testing. Test-only — see
# `tests/adversarial_proptest.rs` and the `RESILIENCE.md` threat model
# at the repo root. Pinned to the latest stable 1.x; runs under
# default `cargo test` (no nightly required).
proptest = { version = "1", default-features = false, features = ["std"] }
