[package]
name = "p0-1-rmcp-hello"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false

[[bin]]
name = "rmcp_hello_server"
path = "src/server.rs"

[[bin]]
name = "rmcp_hello_client"
path = "src/client.rs"

[dependencies]
rmcp = { version = "1", features = ["server", "macros", "transport-io", "schemars"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "process", "time", "net"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
